# sqla2uml

./: .cruft.json  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  pyproject.toml  setup.cfg  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/sqla2uml/: __init__.py  cli.py  generator.py  main.py  scanner.py
tests/: __init__.py  test_sqla2uml.py
