[tool.poetry]
name = "sqla2uml"
version = "0.1.2"
homepage = "https://github.com/abilian/sqla2uml"
description = "Convert your SQLAlchemy models to UML diagrams (via PlantUML)"
authors = ["Abilian SAS <sf@abilian.com>"]
readme = "README.rst"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "sqla2uml", from = "src" },
    { include = "tests", format = "sdist" },
]


[tool.poetry.scripts]
sqla2uml = 'sqla2uml.main:main'


[tool.poetry.dependencies]
python = ">=3.8,<4"

SQLAlchemy = ">=1.3"
devtools = "^0.8.0"


[tool.poetry.dev-dependencies]
## Standard cruft

# Cruft (project templates management)
cruft = "*"
toml = "*"

# Testing
pytest = "*"
pytest-cov = "*"
coveralls = "*"

# Linting
flake8 = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"
flake8-mutable = "*"
flake8-pytest = "*"
flake8-super-call = "*"
flake8-tidy-imports = "*"
mastool = "*"
mccabe = "*"
mypy = "*"

# Formatting
isort = "*"
black = "*"

# Other tools
profilehooks = "*"
pre-commit = "*"
safety = "*"

# Needed for some reason
pyyaml = "*"

# Doc
restructuredtext_lint = "*"

## /standard cruft


[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


#[sqla2uml]
#scan = demo
